@@ -7,7 +7,7 @@ all:
 	$(CC) $(CFLAGS) -c  Cx_ObjectFactory.cpp
 	$(CC) $(CFLAGS) -c  Module.cpp
 	$(CC) $(CFLAGS) -c  Cx_PluginLoader.cpp
-	$(CC) $(C_FLAGS) -o $(PLUGINS_DIR)/libPluginManager.so *.o -ldl
+	$(CC) $(C_FLAGS_SO) -o $(PLUGINS_DIR)/libPluginManager.so *.o -ldl
 clean:
 	rm -rf *.so
 	rm -rf *.o
