@@ -6,7 +6,7 @@ CFLAGS   +=   -I$(INCLUDE_DIR)/pkg_Core/Interface
 all:
 	$(CC) $(CFLAGS) -c  Cx_StringTable.cpp
 	$(CC) $(CFLAGS) -c  Module.cpp
-	$(CC) $(C_FLAGS) -o $(PLUGINS_DIR)/libStringTable.so *.o
+	$(CC) $(C_FLAGS_SO) -o $(PLUGINS_DIR)/libStringTable.so *.o
 clean:
 	rm -rf *.so
 	rm -rf *.o
