@@ -8,9 +8,7 @@ all:
 	$(CC) $(CFLAGS) -c  Cx_GuidGenerator.cpp
 	$(CC) $(CFLAGS) -c  Cx_TextUtil.cpp
 	$(CC) $(CFLAGS) -c  Module.cpp
-	$(CC) $(C_FLAGS) -o $(PLUGINS_DIR)/libTextUtility.so *.o
+	$(CC) $(C_FLAGS_SO) -o $(PLUGINS_DIR)/libTextUtility.so *.o
 clean:
 	rm -rf *.so
 	rm -rf *.o
-
-
