@@ -9,7 +9,7 @@ all:
 	$(CC) $(CFLAGS) -c  CmdObserver.cpp
 	$(CC) $(CFLAGS) -c  WndA.cpp
 	$(CC) $(CFLAGS) -c  Module.cpp
-	$(CC) $(C_FLAGS) -o $(PLUGINS_DIR)/libHollowView.so *.o
+	$(CC) $(C_FLAGS_SO) -o $(PLUGINS_DIR)/libHollowView.so *.o
 clean:
 	rm -rf *.so
 	rm -rf *.o
